# Aethermind

./: .editorconfig  LICENSE  bun.lockb  package.json
ai/: main.py  pyproject.toml
ai/data/: dataset.csv
ai/notebooks/eda/: analytics.ipynb  export_json.ipynb
ai/notebooks/eda/.ipynb_checkpoints/: convert_db-checkpoint.ipynb  data_clean-checkpoint.ipynb  export-checkpoint.ipynb
ai/schema/: schema_pb2.py
app/: README.md  bun.lockb  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
app/data/: index.ts
app/data/analytics/: agegroup_reason_counts.js  agegroup_stats.js  gender_counts.js  gender_reason_counts.js  reason_span_attention_stats.js  reason_stats.js  zone_distribution.js  zone_reason_counts.js  zone_stats.js
app/data/db/: analytics.duckdb  data.duckdb
app/src/: App.tsx  index.css  index.tsx
app/src/components/: DataTable.tsx  Table.tsx  footer.tsx
app/src/components/cards/: InfoCard.tsx  StatCard.tsx
app/src/components/charts/: Barchart.tsx  DoughChart.tsx  HeatmapChart.tsx  LineChart.tsx  MultiBarChart.tsx  PieChart.tsx
app/src/components/hero/: AnimatedBrain.tsx  Animation.css  Hero.tsx
app/src/components/layout/: NavBar.tsx
app/src/schema/: schema.proto  schema_pb.d.ts
app/src/types/: cards.d.ts  charts.d.ts  dashboard.d.ts  data.d.ts  heatmap.d.ts  helpers.d.ts  props.d.ts  table.d.ts
app/src/utils/: sql.ts
scripts/: dbconvert.sh  protogen.sh
