[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.1",
    "grpcio-tools>=1.76.0",
    "jupyterlab>=4.4.10",
    "lazypredict>=0.2.16",
    "matplotlib>=3.7.5",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "protobuf>=6.33.0",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.2",
]
